Dutch translation update
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5490 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-18  Peter Scholtens  <peter(dot)scholtens(at)xs4all(dot)nl>
+
+ * nl.po: Update of Dutch translation, updated latest changes.
+
+
 2010-12-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * fr.po: Update of French translation. Thanks to Jean-Philippe Moal for
