Update of Belarusian translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5491 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -3,6 +3,12 @@
  * nl.po: Update of Dutch translation, updated latest changes.
 
 
+2010-12-18  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * be.po: Update of Belarusian translation. Thanks to Yura Siamashka
+          for providing
+
+
 2010-12-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * fr.po: Update of French translation. Thanks to Jean-Philippe Moal for
