Split Preferences dialog Interface tab into subnotebook to reduce height of dialog (fixes #3141277). Reuses existing strings.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5493 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-12-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/interface.c, geany.glade:
+   Split Preferences dialog Interface tab into subnotebook to reduce
+   height of dialog (fixes #3141277). Reuses existing strings.
+
+
 2010-12-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/build.c:
