Fix detecting non-lowercase self-closing tags e.g. <BR> (#2226117).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/unstable@5494 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-12-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/utils.c:
+   Fix detecting non-lowercase self-closing tags e.g. <BR> (#2226117).
+
+
 2010-12-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * scintilla/gtk/ScintillaGTK.cxx:
