Add short 'View menu' section and 'Color schemes menu' section.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5496 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
  * src/editor.c:
    Scroll to the current line when moving the cursor to the next
    cursor position in a snippet (#3139490).
+ * doc/geany.txt, doc/geany.html:
+   Add short 'View menu' section and 'Color schemes menu' section.
 
 
 2010-12-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
