Add filetypes_get_display_name() to API.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5497 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
    cursor position in a snippet (#3139490).
  * doc/geany.txt, doc/geany.html:
    Add short 'View menu' section and 'Color schemes menu' section.
+ * src/plugindata.h, src/plugins.c, plugins/geanyfunctions.h:
+   Add filetypes_get_display_name() to API.
 
 
 2010-12-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
