Add Edit->Insert Alternative White Space menu item (was previously removed from Edit->Commands submenu).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5498 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-12-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/interface.c, src/keybindings.c, geany.glade:
+   Add Edit->Insert Alternative White Space menu item (was previously
+   removed from Edit->Commands submenu).
+
+
 2010-12-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/interface.c, geany.glade:
