Update of German translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5500 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * de.po: Update of German translation. Review provided by Dominic Hopf.
+
+
 2010-12-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * cs.po: Update of Czech translation. Thanks to Karel Kolman for
