--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,8 @@ Geany 0.20 (t.b.d.s)
 
     Internationalisation:
     * Added translations: kk
+    * Update translations: cs, de, de, en_GB, es, fi, fr, hu, ja, nl, pt,
+                           sl, sv, tr, zh_CN
 
 
 Geany 0.19.2 (December 01, 2010)
@@ -1315,4 +1317,3 @@ Geany 0.2 (October 26, 2005)
 Geany 0.1 (October 19, 2005)
 
         * first official release
-
