Move and update 'Custom filetypes' section. Add 'Creating a custom filetype from an existing filetype' section.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5503 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-12-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * doc/geany.txt, doc/geany.html:
+   Move and update 'Custom filetypes' section.
+   Add 'Creating a custom filetype from an existing filetype' section.
+
+
 2010-12-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/interface.c, src/keybindings.c, geany.glade:
