Update of Portuguese translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5505 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2011-01-02  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * pt.po: Update of Portuguese translation. Thanks to André Glória for
+          providing
+
+
 2010-12-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * de.po: Update of German translation. Review provided by Dominic Hopf.
