Small update of Italian translation. Fixes #3147995
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5506 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-04  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * it.po: Small update of Italian translation. Fixes #3147995
+
+
 2011-01-02  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * pt.po: Update of Portuguese translation. Thanks to André Glória for
