Add debug message with the number of compatible plugins in each plugin search path when showing the Plugin Manager dialog.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5507 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-01-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/plugins.c:
+   Add debug message with the number of compatible plugins in each
+   plugin search path when showing the Plugin Manager dialog.
+
+
 2010-12-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * doc/geany.txt, doc/geany.html:
