--- a/NEWS
+++ b/NEWS
@@ -1,15 +1,179 @@
 Geany 0.20 (t.b.d.s)
 
-    Fixes:
-    * Fix wrong comments for Ada.
+    Bugs:
+    * Improve compatibility with GVFS using GIO to save documents (patch
+      by Alexey Antipov, thanks).
+    * Fix crash when closing a modified document (usually without a
+      trailing newline) and choosing Save (fixes #3111058).
+    * Fix crash when using 'Send Selection to Terminal' and the VTE
+      is not loaded, and when using Ctrl-A after enabling the 'Load VTE'
+      pref (patch by Dimitar Zhekov, thanks).
+    * Fix a slightly wrong encoding detection on Windows (#3019573).
+    * Fix issue with single-line commenting/uncommenting blocks when using
+      Windows line endings.
+    * Fix saving project indent prefs straight after using project
+      properties.
+    * Fix wrongly changing edited keybindings when cancelling the
+      Preferences dialog.
+    * Fix auto-displaying of sidebar, tab bar, symbols and documents tabs
+      when only plugin tabs are visible (fixes #3101867).
+    * Save build commands for filetype None (patch by Lex Trotman, thanks).
+    * Waf: Check for libsocket on OpenSolaris to fix build.
 
-    Manual:
-    * Add documentation for HTMLChars.
+    Interface:
+    * Color build command fields light grey unless overridden.
+    * Replace /home/user with ~ in the documents list (patch by Jon
+      Strait, thanks).
+    * Display 'new instance' on title bar for 2nd instances (patch by
+      Eugene Arshinov, thanks).
+    * Don't add duplicates to combo box histories.
+    * Reorganise Find in Files dialog and add Files pattern to filter
+      search results.
+    * Add sidebar Documents popup menu item 'Find in Files'.
+    * Implement 'Select All' for the VTE widget.
+    * Add Find Usage and Go to Tag items to Search menu for easier
+      discovery.
+    * Reorganise editor popup menu for shorter size - some items were moved
+      to submenus.
+    * Move Go to Marker menu items to Search menu.
+    * Group Open dialog encoding options by submenus (patch by Adam Ples,
+      thanks; #3047717).
+    * Show mimetype icon in sidebar Documents list and notebook (patch by
+      Colomban Wendling, thanks).
+    * Split Preferences dialog Interface tab into subnotebook to reduce
+      height of dialog (#3141277).
+
+    Documents:
+    * Warn about file truncation if unsafe file saving fails.
+    * Ensure inserted templates always have proper line ending characters
+      according to the current document's preference.
+    * Don't prompt for reloading if the document has not been edited
+      (patch by Jiří Techet, thanks).
+    * Add Close button to the detected file changed dialog.
+    * Add per-document indent width setting (patch by Jiří Techet, thanks).
+    * Add 'Project->Apply Default Indentation' menu command to override
+      every document's indentation settings.
+    * Display better error messages when saving a document fails (patch by
+      Dimitar Zhekov, thanks).
+
+    Editor:
+    * Fix wrong snippet indentation when original cursor line has
+      non-indentation whitespace (patch by david, thanks).
+    * Fix passing quoted arguments when using 'Send Selection to'. This
+      means e.g. sed 's/\./(dot)/g' now works.
+    * Add alternative color scheme based on Python colors
+      (View->Editor->Color Schemes).
+    * Replace HTML automatic <table> tag completion with a 'table' snippet
+      (patch by Eugene Arshinov, thanks).
+    * Auto-indent after an HTML/XML line with a missing closing tag (patch
+      by Eugene Arshinov, thanks).
+    * Respect 'Smart' home key for Shift[+Alt]+Home (fixes #3100290,
+      patch by Dimitar Zhekov, thanks).
+    * Scroll to the current line when moving the cursor to the next
+      cursor position in a snippet (#3139490).
+    * If the current word's tag is on the current line, make Go to Tag
+      Definition look for a tag declaration instead and vice versa.
+    * Make Reflow Lines/Block command use the current indented block, not
+      the whole paragraph (which could have mixed indentation).
+
+    Configuration:
+    * Load insertion templates from system path, don't create them in
+      the user's config dir.
+    * File templates don't need manual reloading anymore.
+
+    Prefs:
+    * Add 'Ensure consistent line endings' file saving pref (patch by
+      Manuel Bua, thanks).
+    * Add statusbar_template hidden pref (patch by Dimitar Zhekov, thanks).
+    * Add new_document_after_close hidden pref to open a new document
+      automatically after closing all documents.
+    * Add hidden pref 'find_selection_type' with option to use the X
+      selection or to repeat the last search when there's no selection,
+      both off by default.
+    * Add gio_unsafe_save_backup hidden pref (patch by Lex Trotman,
+      thanks).
+    * Add filetypes.common fold_symbol_highlight color setting.
+    * Add symbol_list_sort_mode per-filetype setting.
+
+    Keybindings:
+    * Fix Alt+[0-9] switching tabs when other modifiers are also held.
+    * Add snippet keybinding support (patch by Eugene Arshinov, thanks).
+    * Add 'Insert New Line Before/After Current' keybindings (patch by
+      Eugene Arshinov, thanks).
+
+    Filetypes:
+    * Add Forth filetype (patch by Thomas Huth, thanks).
+    * Add Lisp filetype (patch by Mário Silva, thanks).
+    * Add Erlang filetype (patch by Taylor Venable, thanks).
+    * Ada: Fix wrong comments.
+    * C++: Disable user fold points with new lexer property
+      fold.cpp.comment.explicit.
+    * Python: Update list of builtins, based on Python 2.6.
+    * Python: Simplify Compile/Syntax Check command.
+    * Python: use named styles for color scheme support - use
+      alt.conf color scheme if you want the old colors.
+    * Matlab: Support Octave # comment char.
+    * Txt2Tags: add lexer (patch by Forgeot Eric, thanks - #3020632).
+    * Make: fix possible infinite loop in tag parser.
+    * D: Parse template functions, ignore /+ +/ comments, ignore
+      unittest blocks, add keywords 'ref', 'macro' and D2 keywords.
+    * C: Add keyword 'restrict' (#3046716).
+    * Vala: Parse functions with contracts (#3080232).
+    * Markdown, reStructuredText and Txt2Tags: Sort tags by line number by
+      default.
+    * Basic: Parse property, constructor, destructor as functions (patch by
+      pottersson, thanks; #2992167).
+    * HTML: Add HTML5 element names and attributes (thanks to Ross McKay).
+    * PHP: Parse final functions (fixes #3111171).
+    * PHP: Add 'instanceof' keyword (#3109330).
+    * Markup: Add xml_indent_tags filetype setting for documents using the
+      HTML/XML lexers (patch by Eugene Arshinov, thanks).
+
+    Plugins:
+    * File Browser: Add history to path entry.
+    * HTML Characters: Only automatically replace characters when the
+      current document is a Markup document.
 
     Internationalisation:
     * Add translations: kk.
     * Update translations: cs, de, de, en_GB, es, fi, fr, hu, ja, nl, pt,
                            sl, sv, tr, zh_CN.
+
+    Manual:
+    * Update 'Custom filetypes' section.
+    * Add HTMLChars plugin section.
+    * Add 'Configuration file paths' section.
+    * Update Ignore Tags section with example and menu item.
+    * Add 'Color schemes menu' section.
+    * Explain how to grep the Scintilla source for lexer properties.
+    * Add documentation for HTMLChars.
+
+    HACKING:
+    * Add 'Bugs to watch out for' section.
+
+    API:
+    * Add ui_combo_box_add_to_history() to API.
+    * Fix not loading plugins built against a newer API when Geany doesn't
+      provide the required version given in PLUGIN_VERSION_CHECK().
+    * Add API signal "build-start" (patch by Jiří Techet, thanks).
+    * Add API macro foreach_range().
+    * Add editor_goto_pos() to the plugin API.
+    * Add GeanyMainWidgets::message_window_notebook for plugins to append
+      a new notebook page (#3061342).
+    * Add plugin signals project-dialog-create and
+      project-dialog-confirmed so plugins can append a Project Properties
+      notebook tab (patch by Jiří Techet, thanks).
+    * Add main_widgets.project_menu to API (patch by Jiří Techet, thanks).
+    * Add msgwin_set_messages_dir() to API (patch by Jiří Techet, thanks).
+    * Improve Stash GUI example.
+    * Add highlighting_is_{string,comment,code}_style(),
+      editor_find_snippet(), editor_insert_snippet(),
+      utils_find_open_xml_tag() (patch by Eugene Arshinov, thanks).
+    * Add dialogs_show_input() to API.
+    * Make GEANY_API_VERSION, GEANY_ABI_VERSION macros instead of enums
+      so you can protect code with '#if GEANY_API_VERSION >= 200'.
+    * Add filetypes_get_display_name() because None is no longer translated.
+    * Add sci_get_lexer() to plugin API.
 
 
 Geany 0.19.2 (December 01, 2010)
