Combine, move, remove, edit 0.20 items.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5510 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/HACKING
+++ b/HACKING
@@ -258,7 +258,7 @@ Bugs to watch out for
 * Not breaking the plugin ABI when necessary.
 * Using an idle callback that doesn't check main_status.quitting.
 * Forgetting CRLF line endings on Windows.
-* Not handling Tabs/Spaces indent mode.
+* Not handling Tabs & Spaces indent mode.
 
 Libraries
 ---------
