--- a/NEWS
+++ b/NEWS
@@ -7,7 +7,7 @@ Geany 0.20 (t.b.d.s)
       trailing newline) and choosing Save (fixes #3111058).
     * Fix crash when using 'Send Selection to Terminal' and the VTE
       is not loaded, and when using Ctrl-A after enabling the 'Load VTE'
-      pref (patch by Dimitar Zhekov, thanks).
+      pref (Dimitar Zhekov, thanks).
     * Fix a slightly wrong encoding detection on Windows (#3019573).
     * Fix issue with single-line commenting/uncommenting blocks when using
       Windows line endings.
@@ -17,13 +17,13 @@ Geany 0.20 (t.b.d.s)
       Preferences dialog.
     * Fix auto-displaying of sidebar, tab bar, symbols and documents tabs
       when only plugin tabs are visible (fixes #3101867).
-    * Save build commands for filetype None (patch by Lex Trotman, thanks).
+    * Save build commands for filetype None (Lex Trotman, thanks).
     * Waf: Check for libsocket on OpenSolaris to fix build.
 
     Interface:
     * Color build command fields light grey unless overridden (Lex
       Trotman).
-    * Replace /home/user with ~ in the documents list (patch by Jon
+    * Replace /home/user with ~ in the documents list (Jon
       Strait, thanks).
     * Display 'new instance' on title bar for 2nd instances (patch by
       Eugene Arshinov, thanks).
@@ -34,36 +34,36 @@ Geany 0.20 (t.b.d.s)
     * Reorganise editor popup menu for shorter size - some items were moved
       to submenus.
     * Move Go to Marker menu items to Search menu.
-    * Group Open dialog encoding options by submenus (patch by Adam Ples,
+    * Group Open dialog encoding options by submenus (Adam Ples,
       thanks; #3047717).
     * Show mimetype icon in sidebar Documents list and notebook popup menu
-      (patch by Colomban Wendling, thanks).
+      (Colomban Wendling, thanks).
 
     Documents:
     * Ensure inserted templates always have proper line ending characters
       according to the current document's preference.
-    * Add per-document indent width setting (patch by Jiří Techet, thanks).
+    * Add per-document indent width setting (Jiří Techet, thanks).
     * Add 'Project->Apply Default Indentation' menu command to override
       every document's indentation settings.
     * Display better error messages when saving a document fails (patch by
       Dimitar Zhekov, thanks).
     * Don't prompt for reloading if the document has not been edited
-      (patch by Jiří Techet, thanks).
+      (Jiří Techet, thanks).
     * Add Close button to the detected file changed dialog.
 
     Editor:
     * Fix wrong snippet indentation when original cursor line has
-      non-indentation whitespace (patch by david, thanks).
+      non-indentation whitespace (david, thanks).
     * Fix passing quoted arguments when using 'Send Selection to'. This
       means e.g. sed 's/\./(dot)/g' now works.
     * Add alternative color scheme based on Python colors
       (View->Editor->Color Schemes).
     * Replace HTML automatic <table> tag completion with a 'table' snippet
-      (patch by Eugene Arshinov, thanks).
+      (Eugene Arshinov, thanks).
     * Auto-indent after an HTML/XML line without a closing tag (patch
       by Eugene Arshinov, thanks).
     * Respect 'Smart' home key pref for Shift[+Alt]+Home (fixes #3100290,
-      patch by Dimitar Zhekov, thanks).
+      Dimitar Zhekov, thanks).
     * Scroll to the current line when moving the cursor to the next
       cursor position in a snippet (#3139490).
     * If the current word's tag is on the current line, make Go to Tag
@@ -79,28 +79,28 @@ Geany 0.20 (t.b.d.s)
     Prefs:
     * Add 'Ensure consistent line endings' file saving pref (patch by
       Manuel Bua, thanks).
-    * Add 'statusbar_template' hidden pref (patch by Dimitar Zhekov,
+    * Add 'statusbar_template' hidden pref (Dimitar Zhekov,
       thanks).
     * Add 'new_document_after_close' hidden pref to open a new document
       automatically after closing all documents.
     * Add hidden pref 'find_selection_type' with option to use the X
       selection or to repeat the last search when there's no selection,
       both off by default.
-    * Add 'gio_unsafe_save_backup' hidden pref (patch by Lex Trotman,
+    * Add 'gio_unsafe_save_backup' hidden pref (Lex Trotman,
       thanks).
     * Add filetypes.common 'fold_symbol_highlight' color setting.
     * Add 'symbol_list_sort_mode' per-filetype setting.
 
     Keybindings:
     * Fix Alt+[0-9] switching tabs even when other modifiers are also held.
-    * Add snippet keybinding support (patch by Eugene Arshinov, thanks).
+    * Add snippet keybinding support (Eugene Arshinov, thanks).
     * Add 'Insert New Line Before/After Current' keybindings (patch by
       Eugene Arshinov, thanks).
 
     Filetypes:
-    * Add Forth filetype (patch by Thomas Huth, thanks).
-    * Add Lisp filetype (patch by Mário Silva, thanks).
-    * Add Erlang filetype (patch by Taylor Venable, thanks).
+    * Add Forth filetype (Thomas Huth, thanks).
+    * Add Lisp filetype (Mário Silva, thanks).
+    * Add Erlang filetype (Taylor Venable, thanks).
     * Ada: Fix wrong comments.
     * C++: Disable user fold points with new lexer property
       fold.cpp.comment.explicit.
@@ -108,7 +108,7 @@ Geany 0.20 (t.b.d.s)
       Compile/Syntax Check command. Use named styles for color scheme
       support (use alt.conf color scheme if you want the old colors).
     * Matlab: Support Octave # comment char.
-    * Txt2Tags: add highlighting (patch by Forgeot Eric, thanks - #3020632).
+    * Txt2Tags: add highlighting (Forgeot Eric, thanks - #3020632).
     * Make: fix possible infinite loop in tag parser.
     * D: Parse template functions, ignore /+ +/ comments, ignore
       unittest blocks, add keywords 'ref', 'macro' and D2 keywords.
@@ -120,7 +120,7 @@ Geany 0.20 (t.b.d.s)
     * HTML: Add HTML5 element names and attributes (thanks to Ross McKay).
     * PHP: Parse final functions (fixes #3111171).
     * Markup: Add xml_indent_tags filetype setting for documents using the
-      HTML/XML lexers (patch by Eugene Arshinov, thanks).
+      HTML/XML lexers (Eugene Arshinov, thanks).
 
     Plugins:
     * File Browser: Add history to path entry.
@@ -149,17 +149,17 @@ Geany 0.20 (t.b.d.s)
       so you can protect code with '#if GEANY_API_VERSION >= 200'.
     * Add signals "build-start", "project-dialog-create" and
       "project-dialog-confirmed" - to append a Project Properties
-      notebook tab (patch by Jiří Techet, thanks).
+      notebook tab (Jiří Techet, thanks).
     * Add macro foreach_range().
     * Add GeanyMainWidgets::message_window_notebook (#3061342).
-    * Add main_widgets.project_menu (patch by Jiří Techet, thanks).
-    * Add msgwin_set_messages_dir() (patch by Jiří Techet, thanks).
+    * Add main_widgets.project_menu (Jiří Techet, thanks).
+    * Add msgwin_set_messages_dir() (Jiří Techet, thanks).
     * Add highlighting_is_{string,comment,code}_style(),
       editor_find_snippet(), editor_insert_snippet(),
-      utils_find_open_xml_tag() (patch by Eugene Arshinov, thanks).
+      utils_find_open_xml_tag() (Eugene Arshinov, thanks).
     * Add ui_combo_box_add_to_history(), editor_goto_pos(),
       dialogs_show_input(), Add sci_get_lexer().
-    * Add filetypes_get_display_name() because None is no longer translated.
+    * Add filetypes_get_display_name() as "None" is no longer translated.
 
 
 Geany 0.19.2 (December 01, 2010)
